--- a/Trabalho SO/Base.lproj/Main.storyboard
+++ b/Trabalho SO/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Initial View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="InitialViewController" customModule="Trabalho_SO" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,117 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7o-pf-Np3">
+                                <rect key="frame" x="0.0" y="225" width="375" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="216" id="Eyo-fv-U0n"/>
+                                    <constraint firstAttribute="width" constant="375" id="G1k-5X-IAT"/>
+                                </constraints>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="INx-rg-fNs">
+                                <rect key="frame" x="164" y="494" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="done:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Beq-rb-xrn"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="INx-rg-fNs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I1F-gs-nVx"/>
+                            <constraint firstItem="X7o-pf-Np3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SQy-ai-zK6"/>
+                            <constraint firstItem="X7o-pf-Np3" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="fy4-AN-zEX"/>
+                            <constraint firstItem="INx-rg-fNs" firstAttribute="top" secondItem="X7o-pf-Np3" secondAttribute="bottom" constant="53" id="t6X-Ig-0M3"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="picker" destination="X7o-pf-Np3" id="fXm-p5-Wgb"/>
+                        <segue destination="Zel-Jm-iug" kind="show" identifier="segue" id="ttX-W0-mto"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Byn-Cl-Pae">
+            <objects>
+                <viewController id="Zel-Jm-iug" customClass="ViewController" customModule="Trabalho_SO" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dsg-XK-7pl"/>
+                        <viewControllerLayoutGuide type="bottom" id="CGK-aS-r0x"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="YH5-Sa-hoa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5bV-4f-MKs">
+                                <rect key="frame" x="140" y="332" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="zzzzz:" destination="Zel-Jm-iug" eventType="touchUpInside" id="B0O-vh-khc"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="ballSwitch" destination="Nyu-km-LQX" id="4Cc-Yp-zuH"/>
+                        <outlet property="kidLabel" destination="MBF-2f-Uf7" id="dLi-ab-LsA"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6j4-ZQ-muC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="E3E-q4-Pim" customClass="InstantiateKidView" customModule="Trabalho_SO" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kid 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBF-2f-Uf7">
+                            <rect key="frame" x="99" y="0.0" width="37" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nyu-km-LQX">
+                            <rect key="frame" x="155" y="20" width="51" height="31"/>
+                        </switch>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ball" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soK-W3-Bcs">
+                            <rect key="frame" x="37" y="25" width="28" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Had-w4-vrg">
+                            <rect key="frame" x="99" y="98" width="37" height="30"/>
+                            <state key="normal" title="Done"/>
+                            <connections>
+                                <action selector="done:" destination="E3E-q4-Pim" eventType="touchUpInside" id="fXz-IT-9Mm"/>
+                            </connections>
+                        </button>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmU-ib-2p6">
+                            <rect key="frame" x="0.0" y="54" width="240" height="49"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="49" id="Iff-EZ-I3c"/>
+                                <constraint firstAttribute="width" constant="240" id="w9V-eN-OHZ"/>
+                            </constraints>
+                        </pickerView>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="soK-W3-Bcs" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="25" id="1gS-8U-lgK"/>
+                        <constraint firstItem="tmU-ib-2p6" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" id="Mg2-QD-hIp"/>
+                        <constraint firstItem="Had-w4-vrg" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" constant="-2.5" id="OFV-gA-1DE"/>
+                        <constraint firstItem="MBF-2f-Uf7" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" constant="-2.5" id="OTC-Zi-9jf"/>
+                        <constraint firstItem="MBF-2f-Uf7" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" id="SMJ-pM-uXA"/>
+                        <constraint firstItem="soK-W3-Bcs" firstAttribute="leading" secondItem="E3E-q4-Pim" secondAttribute="leading" constant="37" id="TXz-ck-GAE"/>
+                        <constraint firstAttribute="trailing" secondItem="Nyu-km-LQX" secondAttribute="trailing" constant="36" id="cYc-EB-oZc"/>
+                        <constraint firstItem="Had-w4-vrg" firstAttribute="top" secondItem="tmU-ib-2p6" secondAttribute="bottom" constant="-5" id="sUn-lB-gzM"/>
+                        <constraint firstItem="Nyu-km-LQX" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="20" id="uCI-cQ-Pry"/>
+                        <constraint firstAttribute="bottom" secondItem="tmU-ib-2p6" secondAttribute="bottom" constant="25" id="x2Z-Pb-aGG"/>
+                    </constraints>
+                </view>
+            </objects>
+            <point key="canvasLocation" x="974" y="38"/>
         </scene>
     </scenes>
 </document>
