--- a/Trabalho SO/Base.lproj/Main.storyboard
+++ b/Trabalho SO/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -52,10 +53,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="Byn-Cl-Pae">
             <objects>
-                <viewController id="Zel-Jm-iug" customClass="ViewController" customModule="Trabalho_SO" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Zel-Jm-iug" customClass="MainViewController" customModule="Trabalho_SO" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dsg-XK-7pl"/>
                         <viewControllerLayoutGuide type="bottom" id="CGK-aS-r0x"/>
@@ -64,24 +65,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5bV-4f-MKs">
-                                <rect key="frame" x="140" y="332" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5bV-4f-MKs">
+                                <rect key="frame" x="138" y="20" width="98" height="30"/>
+                                <state key="normal" title="Instantiate Kid"/>
                                 <connections>
-                                    <action selector="zzzzz:" destination="Zel-Jm-iug" eventType="touchUpInside" id="B0O-vh-khc"/>
+                                    <action selector="callInstantiateKidView:" destination="Zel-Jm-iug" eventType="touchUpInside" id="oJx-rA-p7B"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Mi-zR-bOh">
+                                <rect key="frame" x="325" y="20" width="34" height="30"/>
+                                <state key="normal" title="Start"/>
+                                <connections>
+                                    <action selector="startAplication:" destination="Zel-Jm-iug" eventType="touchUpInside" id="T29-zF-DyF"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Mi-zR-bOh" firstAttribute="top" secondItem="dsg-XK-7pl" secondAttribute="bottom" id="0mL-5D-vCM"/>
+                            <constraint firstItem="5bV-4f-MKs" firstAttribute="centerX" secondItem="YH5-Sa-hoa" secondAttribute="centerX" id="5P1-gH-gVB"/>
+                            <constraint firstItem="5bV-4f-MKs" firstAttribute="top" secondItem="dsg-XK-7pl" secondAttribute="bottom" id="Esf-Jf-Wep"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9Mi-zR-bOh" secondAttribute="trailing" id="HOc-ZV-mBu"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="ballSwitch" destination="Nyu-km-LQX" id="4Cc-Yp-zuH"/>
+                        <outlet property="instantiateKidView" destination="E3E-q4-Pim" id="s8g-zs-vm2"/>
                         <outlet property="kidLabel" destination="MBF-2f-Uf7" id="dLi-ab-LsA"/>
+                        <outlet property="picker" destination="tmU-ib-2p6" id="Mcg-J7-zvx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6j4-ZQ-muC" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <view contentMode="scaleToFill" id="E3E-q4-Pim" customClass="InstantiateKidView" customModule="Trabalho_SO" customModuleProvider="target">
+                <view contentMode="scaleToFill" id="E3E-q4-Pim">
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
@@ -104,7 +119,7 @@
                             <rect key="frame" x="99" y="98" width="37" height="30"/>
                             <state key="normal" title="Done"/>
                             <connections>
-                                <action selector="done:" destination="E3E-q4-Pim" eventType="touchUpInside" id="fXz-IT-9Mm"/>
+                                <action selector="doneInstantiatingKid:" destination="Zel-Jm-iug" eventType="touchUpInside" id="5XZ-7m-dnJ"/>
                             </connections>
                         </button>
                         <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmU-ib-2p6">
@@ -130,7 +145,7 @@
                     </constraints>
                 </view>
             </objects>
-            <point key="canvasLocation" x="974" y="38"/>
+            <point key="canvasLocation" x="989.60000000000002" y="136.28185907046478"/>
         </scene>
     </scenes>
 </document>
