--- a/Trabalho SO/Base.lproj/Main.storyboard
+++ b/Trabalho SO/Base.lproj/Main.storyboard
@@ -92,7 +92,8 @@
                         <outlet property="ballSwitch" destination="Nyu-km-LQX" id="4Cc-Yp-zuH"/>
                         <outlet property="instantiateKidView" destination="E3E-q4-Pim" id="s8g-zs-vm2"/>
                         <outlet property="kidLabel" destination="MBF-2f-Uf7" id="dLi-ab-LsA"/>
-                        <outlet property="picker" destination="tmU-ib-2p6" id="Mcg-J7-zvx"/>
+                        <outlet property="playPicker" destination="tmU-ib-2p6" id="Vsg-cJ-Lj1"/>
+                        <outlet property="spendPicker" destination="HR2-Zm-W95" id="Ue4-5C-gPe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6j4-ZQ-muC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -100,48 +101,53 @@
                     <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kid 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBF-2f-Uf7">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kid 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MBF-2f-Uf7">
                             <rect key="frame" x="99" y="0.0" width="37" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nyu-km-LQX">
+                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nyu-km-LQX">
                             <rect key="frame" x="155" y="20" width="51" height="31"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </switch>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ball" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soK-W3-Bcs">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ball" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="soK-W3-Bcs">
                             <rect key="frame" x="37" y="25" width="28" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Had-w4-vrg">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Had-w4-vrg">
                             <rect key="frame" x="99" y="98" width="37" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <state key="normal" title="Done"/>
                             <connections>
                                 <action selector="doneInstantiatingKid:" destination="Zel-Jm-iug" eventType="touchUpInside" id="5XZ-7m-dnJ"/>
                             </connections>
                         </button>
-                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmU-ib-2p6">
-                            <rect key="frame" x="0.0" y="54" width="240" height="49"/>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HR2-Zm-W95">
+                            <rect key="frame" x="149" y="54" width="91" height="49"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="49" id="Iff-EZ-I3c"/>
-                                <constraint firstAttribute="width" constant="240" id="w9V-eN-OHZ"/>
+                                <constraint firstAttribute="width" constant="91" id="WG9-Iy-gKH"/>
+                                <constraint firstAttribute="height" constant="49" id="qfS-b9-wia"/>
+                            </constraints>
+                        </pickerView>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tmU-ib-2p6">
+                            <rect key="frame" x="0.0" y="54" width="91" height="49"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="91" id="7e5-CY-2p6"/>
+                                <constraint firstAttribute="height" constant="49" id="FKY-xK-jVr"/>
                             </constraints>
                         </pickerView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="soK-W3-Bcs" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="25" id="1gS-8U-lgK"/>
-                        <constraint firstItem="tmU-ib-2p6" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" id="Mg2-QD-hIp"/>
-                        <constraint firstItem="Had-w4-vrg" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" constant="-2.5" id="OFV-gA-1DE"/>
-                        <constraint firstItem="MBF-2f-Uf7" firstAttribute="centerX" secondItem="E3E-q4-Pim" secondAttribute="centerX" constant="-2.5" id="OTC-Zi-9jf"/>
-                        <constraint firstItem="MBF-2f-Uf7" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" id="SMJ-pM-uXA"/>
-                        <constraint firstItem="soK-W3-Bcs" firstAttribute="leading" secondItem="E3E-q4-Pim" secondAttribute="leading" constant="37" id="TXz-ck-GAE"/>
-                        <constraint firstAttribute="trailing" secondItem="Nyu-km-LQX" secondAttribute="trailing" constant="36" id="cYc-EB-oZc"/>
-                        <constraint firstItem="Had-w4-vrg" firstAttribute="top" secondItem="tmU-ib-2p6" secondAttribute="bottom" constant="-5" id="sUn-lB-gzM"/>
-                        <constraint firstItem="Nyu-km-LQX" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="20" id="uCI-cQ-Pry"/>
-                        <constraint firstAttribute="bottom" secondItem="tmU-ib-2p6" secondAttribute="bottom" constant="25" id="x2Z-Pb-aGG"/>
+                        <constraint firstItem="HR2-Zm-W95" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="54" id="Gox-bM-cA6"/>
+                        <constraint firstItem="tmU-ib-2p6" firstAttribute="leading" secondItem="E3E-q4-Pim" secondAttribute="leading" id="Jjn-Lk-8jp"/>
+                        <constraint firstAttribute="trailing" secondItem="HR2-Zm-W95" secondAttribute="trailing" id="hAz-qp-3Wf"/>
+                        <constraint firstItem="tmU-ib-2p6" firstAttribute="top" secondItem="E3E-q4-Pim" secondAttribute="top" constant="54" id="njn-WO-Zf8"/>
                     </constraints>
                 </view>
             </objects>
